# The-Ultimate-ML-Course

./: .gitignore  .pre-commit-config.yaml  GitCommands.md  Git_Merge.md  README.md  config.ipynb  setup-zsh-mac.sh  setup-zsh-ubuntu-debian.sh
serving/: pyproject.toml
serving/L1_mlflow/: S1_mlflow_sklearn.py  model-settings.json  readme.md  rf_infer.py
serving/L2_mlflow-hyperopt/: S2_train_mlflow_xgb-optuna.py  _model-settings.json  dataset.py  load.py  model-settings.json  readme.md  runtime.py  settings.json  utils.py  xgb_infer.py  xgb_infer_custom_runtime.py
serving/L4_EKS_kserve_mlflow/: build_v2_docker.sh  eks-cluster-config.yaml  get-inference-url.sh  model-settings.json  test_inference-mlserver.sh  test_inference.sh  training_auto-hyperopt.py  training_auto.py
serving/L4_EKS_kserve_mlflow/iam-policies/: kserve-s3-policy.json  mlflow-server-policy.json
serving/L4_EKS_kserve_mlflow/manifests/: inference.yaml  ingress-alb.yaml  kourier-service.yaml  mlflow-server.yaml  storageclass-gp3.yaml
serving/L4_EKS_kserve_mlflow/md/: ACCESSING_SERVICES.md  CLEANUP_CHECKLIST.md  CLEANUP_IMPROVEMENTS.md  DEPLOYMENT_WORKFLOW.md  EKS_SETUP_GUIDE.md  EXPLAIN.md  KEY_CHANGES_SUMMARY.md  MLFLOW_CONFIGURATION.md  PORTFOLIO_ASSESSMENT.md  PREFLIGHT_CHECKLIST.md  PROJECT_SHOWCASE.md  QUICK_REFERENCE.md  RECENT_UPDATES.md  SERVING_MLFLOW_MODELS.md  TROUBLESHOOTING.md  readme.md
serving/L4_EKS_kserve_mlflow/scripts/: 0-cleanup-failed-install.sh  1-setup-eks-cluster.sh  2-setup-alb-controller.sh  3-install-kserve.sh  4-setup-s3-mlflow.sh  5-deploy-mlflow-on-eks.sh  (+1 more)
(+169 files in other folders)
