[project]
name = "serving"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlflow>=3.8.1",
    "mlserver>=1.7.1",
    "mlserver-mlflow>=1.7.1",
    "mlserver-xgboost>=1.7.1",
    "optuna>=4.7.0",
    "pip>=25.3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "virtualenv>=20.36.1",
    "xgboost>=3.1.3",
]
